# os-1

./: .clang-format  .gdbinit  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  Makefile  README.md  annotated.html  basename_8c.html  bio.c  bio_8c.html  bio_8c__incl.md5  bio_8c_a47340ad032ee4559cfcdaf99ed7bdc5c_cgraph.map  bio_8c_a53cca0ddc98c5f1de37124eca2575a59_cgraph.md5  bio_8c_aa118b4fa3c1c5d061e04fc824f9d1891_icgraph.map  buf.h  buf_8h__incl.map  buf_8h__incl.md5  buf_8h_a53cca0ddc98c5f1de37124eca2575a59_cgraph.map  buf_8h_a53cca0ddc98c5f1de37124eca2575a59_icgraph.md5  buf_8h_a698c2e69ee3a6a76b6adfd479397969b_cgraph.map  buf_8h_a698c2e69ee3a6a76b6adfd479397969b_icgraph.md5  classes.html  compile_commands.json  crt0.S  devsw_8c.html  devsw_8c__incl.md5  devsw_8h__dep__incl.md5  devsw_8h__incl.md5  dir_000000_000001.html  dir_000002_000000.html  dir_000002_000003.html  dir_000003_000000.html  dir_000004_000000.html  dir_000005_000000.html  dir_000005_000004.html  dir_000006_000000.html  dir_000006_000004.html  dir_000007_000004.html  (+447 more)
.github/workflows/: build.yml  docker.yml  docs.yml  format.yml
d0/d15/: lib_8h__incl.map  lib_8h__incl.md5
d0/d28/: plic_8h__dep__incl.map  plic_8h__dep__incl.md5
d0/d29/: main_8c.html  main_8c_a406c20548822065e144564476378f8a1_cgraph.map  main_8c_a406c20548822065e144564476378f8a1_cgraph.md5  main_8c_a406c20548822065e144564476378f8a1_icgraph.map  main_8c_aa97e24fea4daabae6b4e5d534ac8066d_cgraph.map  main_8c_aa97e24fea4daabae6b4e5d534ac8066d_cgraph.md5
d0/d30/: md_README.html
d0/d56/: uart_8c__incl.map  uart_8c__incl.md5
d0/d61/: sys__truncate_8c.html
d0/d6b/: sys__fork_8c__incl.map  sys__fork_8c__incl.md5
d0/d74/: sleeplock_8h.html  sleeplock_8h_a06fbbca3e6650406000f3cc1ce326e4d_icgraph.map  sleeplock_8h_a70681555597cff29eabb9ec21f7a865e_icgraph.md5  sleeplock_8h_ab63c9f0a9f71c65020743193340560fa_cgraph.md5  sleeplock_8h_ab63c9f0a9f71c65020743193340560fa_icgraph.md5  sleeplock_8h_source.html
d0/d7a/: devsw_8h__incl.map  devsw_8h__incl.md5  structbdevsw.html
d0/d97/: structpage__coll__graph.map  structpage__coll__graph.md5
d0/dc6/: libgen_8h.html  libgen_8h_aa14fc3333d84f41eacc023626687aebd_cgraph.map  libgen_8h_aa14fc3333d84f41eacc023626687aebd_cgraph.md5  libgen_8h_aa14fc3333d84f41eacc023626687aebd_icgraph.map  libgen_8h_ab1b6028f4625caec30c1020e737216e2_cgraph.map  libgen_8h_ab1b6028f4625caec30c1020e737216e2_icgraph.map  libgen_8h_ab1b6028f4625caec30c1020e737216e2_icgraph.md5  libgen_8h_source.html
d0/dcf/: structtrapframe__t__coll__graph.map  structtrapframe__t__coll__graph.md5
d0/de5/: structcpu__coll__graph.map  structcpu__coll__graph.md5
d0/df8/: structinode.html
d1/d01/: sys__write_8c.html  (+4 more)
d1/d0e/: nanosleep_8c__incl.map  (+1 more)
html/: README_8md.html  basename_8c__incl.map  basename_8c__incl.md5  basename_8c_aa14fc3333d84f41eacc023626687aebd_cgraph.md5  bio_8c__incl.map  bio_8c_a53cca0ddc98c5f1de37124eca2575a59_icgraph.map  bio_8c_a698c2e69ee3a6a76b6adfd479397969b_icgraph.map  buf_8h.html  buf_8h__dep__incl.map  buf_8h__dep__incl.md5  buf_8h_a47340ad032ee4559cfcdaf99ed7bdc5c_cgraph.md5  buf_8h_a698c2e69ee3a6a76b6adfd479397969b_cgraph.md5  buf_8h_aa118b4fa3c1c5d061e04fc824f9d1891_icgraph.md5  buf_8h_source.html  classes.html  devsw_8c__incl.map  devsw_8h.html  devsw_8h__dep__incl.map  devsw_8h__incl.map  devsw_8h_source.html  dir_000002_000000.html  dir_000002_000003.html  dir_000006_000004.html  dir_000007_000004.html  dir_000008_000000.html  dir_000008_000003.html  dir_2a917577c833953ff5901e4935a90760_dep.md5  dir_5f5508d11e3e647f632e0b46102de23e.html  dir_5f5508d11e3e647f632e0b46102de23e_dep.map  dir_5f5508d11e3e647f632e0b46102de23e_dep.md5  dir_902ccc1d1f35ec7608c008c090ce6a24_dep.map  dir_9c99158f21f12d76100305e616b7d1f5_dep.md5  dir_dc43877d82dd332f9fb2071fcca799d6_dep.map  dir_f3e09d3f6a1a467443c2d3dc67ac393d_dep.map  dir_f3e09d3f6a1a467443c2d3dc67ac393d_dep.md5  dir_fc1eb218ab426e5adb60367f98438da0_dep.md5  dirname_8c.html  dirname_8c__incl.map  dirname_8c_ab1b6028f4625caec30c1020e737216e2_cgraph.md5  elf_8h.html  (+303 more)
include/: alloc.h  buf.h  devsw.h  elf.h  fcntl.h  file.h  fs.h  ipc.h  kmalloc.h  lib.h  libgen.h  list.h  os1.h  plic.h  printk.h  proc.h  riscv.h  sched.h  sleeplock.h  slob.h  syscall.h  trap.h  types.h  uart.h  unistd.h  virtio.h  vm.h
kernel/: CMakeLists.txt  alloc.c  bio.c  buf.h  devsw.c  fio.c  fs.c  init.S  ipc.c  kernel.ldS  kmalloc.c  main.c  panic.c  panic.h  plic.c  printk.c  printk.h  proc.c  proc.h  sched.c  sleeplock.c  slob.c  start.S  swtch.S  syscall.c  timer.S  timer.c  trampoline.S  trap.c  uart.c  virtio.c  vm.c
kernel/lib/: CMakeLists.txt  basename.c  dirname.c  list.c  memcpy.c  memmove.c  memset.c  strcmp.c  strcpy.c  strlen.c  strncmp.c  strtok.c
kernel/sys/: CMakeLists.txt  sys_brk.c  sys_close.c  sys_dup.c  sys_execev.c  sys_exit.c  sys_fork.c  sys_fstat.c  sys_link.c  sys_mkdir.c  sys_mknod.c  sys_open.c  sys_read.c  sys_sbrk.c  sys_stat.c  sys_truncate.c  sys_waitpid.c  sys_write.c
libc/: CMakeLists.txt
libc/sys2/: CMakeLists.txt  fstat.S  waitpid.S
libgloss/: CMakeLists.txt  brk.S  close.S  crt0.S  dup.S  dup.c  execv.S  execv.c  execve.c  fork.S  fstat.S  ipc.S  link.S  mkdir.S  mknod.S  mknod.c  nanosleep.c  open.S  read.S  sbrk.c  stat.S  syscalls.c  times.c  truncate.S  wait.c  waitpid.S  waitpid.c  write.S
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  defines_0.js  defines_1.js  (+104 more)
tests/: CMakeLists.txt
tests/UTs/: CMakeLists.txt
tests/UTs/list/: CMakeLists.txt  main.c
tests/UTs/test_framework/: CMakeLists.txt  test_framework.c  test_framework.h
userland/: CMakeLists.txt  cat.c  crt0.S  hello.c  init.c  ls.c  sh.c  user.ldS
(+1264 files in other folders)
